--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -83,8 +83,9 @@ Size=708,156
 Collapsed=0
 
 [Window][Settings]
-Pos=1021,44
-Size=195,298
+ViewportPos=1743,138
+ViewportId=0x1C33C293
+Size=415,212
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
