Added subtextures to sprite sheet api.

--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -167,6 +167,7 @@
     <ClInclude Include="src\MAAT\Renderer\Renderer2D.h" />
     <ClInclude Include="src\MAAT\Renderer\RendererAPI.h" />
     <ClInclude Include="src\MAAT\Renderer\Shader.h" />
+    <ClInclude Include="src\MAAT\Renderer\SubTexture2D.h" />
     <ClInclude Include="src\MAAT\Renderer\Texture.h" />
     <ClInclude Include="src\MAAT\Renderer\VertexArray.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
@@ -614,6 +615,7 @@
     <ClCompile Include="src\MAAT\Renderer\Renderer2D.cpp" />
     <ClCompile Include="src\MAAT\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Shader.cpp" />
+    <ClCompile Include="src\MAAT\Renderer\SubTexture2D.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Texture.cpp" />
     <ClCompile Include="src\MAAT\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
@@ -643,4 +645,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
