Created basic dirt/water map.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -83,9 +83,8 @@ Size=708,156
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1743,138
-ViewportId=0x1C33C293
-Size=415,212
+Pos=1051,21
+Size=192,165
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
