--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -20,8 +20,7 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-ViewportPos=495,251
-ViewportId=0x4647B76E
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -83,8 +82,8 @@ Size=708,156
 Collapsed=0
 
 [Window][Settings]
-Pos=1051,21
-Size=192,165
+Pos=849,77
+Size=331,402
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
@@ -99,7 +98,7 @@ Column 2  Width=63
 
 [Docking][Data]
 DockNode          ID=0x0000000B Pos=100,223 Size=174,90 Selected=0x3727FC6C
-DockSpace         ID=0x3BC79352 Pos=495,289 Size=1280,682 Split=X
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=60,102 Size=1280,701 Split=X
   DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=371,1019 Split=Y Selected=0x08F8367F
     DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=371,518 Selected=0x08F8367F
     DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=371,499 Selected=0xAE1DCC2C
