--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="src\MAAT\Events\MouseEvent.h" />
     <ClInclude Include="src\MAAT\ImGui\ImGuiLayer.h" />
     <ClInclude Include="src\MAAT\Renderer\Buffer.h" />
+    <ClInclude Include="src\MAAT\Renderer\Framebuffer.h" />
     <ClInclude Include="src\MAAT\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\MAAT\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\MAAT\Renderer\OrthographicCameraController.h" />
@@ -172,6 +173,7 @@
     <ClInclude Include="src\MAAT\Renderer\VertexArray.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLTexture.h" />
@@ -607,6 +609,7 @@
     <ClCompile Include="src\MAAT\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\MAAT\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\MAAT\Renderer\Framebuffer.cpp" />
     <ClCompile Include="src\MAAT\Renderer\GraphicsContext.cpp" />
     <ClCompile Include="src\MAAT\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\MAAT\Renderer\OrthographicCameraController.cpp" />
@@ -620,6 +623,7 @@
     <ClCompile Include="src\MAAT\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
@@ -645,4 +649,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
