--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -20,7 +20,6 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -82,8 +81,8 @@ Size=708,156
 Collapsed=0
 
 [Window][Settings]
-Pos=411,50
-Size=798,641
+Pos=1017,34
+Size=171,215
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
@@ -98,7 +97,7 @@ Column 2  Width=63
 
 [Docking][Data]
 DockNode          ID=0x0000000B Pos=100,223 Size=174,90 Selected=0x3727FC6C
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=86,128 Size=1280,701 Split=X
+DockSpace         ID=0x3BC79352 Pos=86,128 Size=1280,701 Split=X
   DockNode        ID=0x00000009 Parent=0x3BC79352 SizeRef=371,1019 Split=Y Selected=0x08F8367F
     DockNode      ID=0x00000007 Parent=0x00000009 SizeRef=371,518 Selected=0x08F8367F
     DockNode      ID=0x00000008 Parent=0x00000009 SizeRef=371,499 Selected=0xAE1DCC2C
