--- a/MAAT-Editor/imgui.ini
+++ b/MAAT-Editor/imgui.ini
@@ -4,7 +4,8 @@ Size=1280,720
 Collapsed=0
 
 [Window][Debug##Default]
-Pos=60,60
+ViewportPos=1168,220
+ViewportId=0x9F5F46A1
 Size=400,400
 Collapsed=0
 
@@ -21,7 +22,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1280,701 Split=X Selected=0x13926F0B
+DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=242,284 Size=1280,701 Split=X Selected=0x13926F0B
   DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=222,701 Selected=0x54723243
   DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=1056,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
 
