--- a/MAAT/MAAT.vcxproj.filters
+++ b/MAAT/MAAT.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="src\MAAT\Renderer\Buffer.h">
       <Filter>src\MAAT\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\MAAT\Renderer\Camera.h">
+      <Filter>src\MAAT\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\MAAT\Renderer\Framebuffer.h">
       <Filter>src\MAAT\Renderer</Filter>
     </ClInclude>
