--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -175,6 +175,7 @@
     <ClInclude Include="src\MAAT\Scene\Components.h" />
     <ClInclude Include="src\MAAT\Scene\Entity.h" />
     <ClInclude Include="src\MAAT\Scene\Scene.h" />
+    <ClInclude Include="src\MAAT\Scene\SceneCamera.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
@@ -625,6 +626,7 @@
     <ClCompile Include="src\MAAT\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\MAAT\Scene\Entity.cpp" />
     <ClCompile Include="src\MAAT\Scene\Scene.cpp" />
+    <ClCompile Include="src\MAAT\Scene\SceneCamera.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp" />
@@ -653,4 +655,4 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
-</Project>
+</Project> 
