--- a/MAAT/MAAT.vcxproj.filters
+++ b/MAAT/MAAT.vcxproj.filters
@@ -165,6 +165,9 @@
     <ClInclude Include="src\MAAT\Scene\Scene.h">
       <Filter>src\MAAT\Scene</Filter>
     </ClInclude>
+    <ClInclude Include="src\MAAT\Scene\SceneCamera.h">
+      <Filter>src\MAAT\Scene</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
@@ -1509,6 +1512,9 @@
       <Filter>src\MAAT\Scene</Filter>
     </ClCompile>
     <ClCompile Include="src\MAAT\Scene\Scene.cpp">
+      <Filter>src\MAAT\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="src\MAAT\Scene\SceneCamera.cpp">
       <Filter>src\MAAT\Scene</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
