--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="src\MAAT\Scene\Entity.h" />
     <ClInclude Include="src\MAAT\Scene\Scene.h" />
     <ClInclude Include="src\MAAT\Scene\SceneCamera.h" />
+    <ClInclude Include="src\MAAT\Scene\ScriptableEntity.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
