--- a/MAAT-Editor/imgui.ini
+++ b/MAAT-Editor/imgui.ini
@@ -10,19 +10,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
-Size=318,701
-Collapsed=0
-DockId=0x00000001,0
-
-[Window][Viewport]
-Pos=320,19
-Size=960,701
+Pos=975,19
+Size=305,701
 Collapsed=0
 DockId=0x00000002,0
 
+[Window][Viewport]
+Pos=288,19
+Size=685,701
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Scene Hierarchy]
+Pos=0,19
+Size=286,701
+Collapsed=0
+DockId=0x00000003,0
+
 [Docking][Data]
-DockSpace   ID=0x3BC79352 Window=0x4647B76E Pos=86,128 Size=1280,701 Split=X Selected=0x13926F0B
-  DockNode  ID=0x00000001 Parent=0x3BC79352 SizeRef=318,701 Selected=0x54723243
-  DockNode  ID=0x00000002 Parent=0x3BC79352 SizeRef=960,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=242,284 Size=1280,701 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=286,701 Selected=0x2E9237F7
+  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=992,701 Split=X
+    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=685,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=305,701 Selected=0x54723243
 
