--- a/MAAT-Editor/imgui.ini
+++ b/MAAT-Editor/imgui.ini
@@ -23,13 +23,21 @@ DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=286,701
+Size=286,339
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000005,0
+
+[Window][Inspector]
+Pos=0,360
+Size=286,360
+Collapsed=0
+DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=242,284 Size=1280,701 Split=X Selected=0x13926F0B
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=286,701 Selected=0x2E9237F7
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=60,102 Size=1280,701 Split=X Selected=0x13926F0B
+  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=286,701 Split=Y Selected=0x2E9237F7
+    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=286,339 Selected=0x2E9237F7
+    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=286,360 Selected=0xE7039252
   DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=992,701 Split=X
     DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=685,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
     DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=305,701 Selected=0x54723243
