Added Camera Component UI.

--- a/MAAT-Editor/imgui.ini
+++ b/MAAT-Editor/imgui.ini
@@ -4,8 +4,7 @@ Size=1280,720
 Collapsed=0
 
 [Window][Debug##Default]
-ViewportPos=1358,410
-ViewportId=0x9F5F46A1
+Pos=242,151
 Size=400,400
 Collapsed=0
 
@@ -34,7 +33,7 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=60,102 Size=1280,701 Split=X Selected=0x13926F0B
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=187,175 Size=1280,701 Split=X Selected=0x13926F0B
   DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=286,701 Split=Y Selected=0x2E9237F7
     DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=286,339 Selected=0x2E9237F7
     DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=286,360 Selected=0xE7039252
