--- a/MAAT-Editor/imgui.ini
+++ b/MAAT-Editor/imgui.ini
@@ -15,29 +15,37 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Viewport]
-Pos=288,19
-Size=685,701
+Pos=186,19
+Size=852,508
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Scene Hierarchy]
 Pos=0,19
-Size=286,339
+Size=184,701
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000003,0
 
 [Window][Inspector]
-Pos=0,360
-Size=286,360
+Pos=1040,19
+Size=240,701
+Collapsed=0
+DockId=0x00000008,0
+
+[Window][Stats]
+Pos=186,529
+Size=852,191
 Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=187,175 Size=1280,701 Split=X Selected=0x13926F0B
-  DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=286,701 Split=Y Selected=0x2E9237F7
-    DockNode  ID=0x00000005 Parent=0x00000003 SizeRef=286,339 Selected=0x2E9237F7
-    DockNode  ID=0x00000006 Parent=0x00000003 SizeRef=286,360 Selected=0xE7039252
-  DockNode    ID=0x00000004 Parent=0x3BC79352 SizeRef=992,701 Split=X
-    DockNode  ID=0x00000001 Parent=0x00000004 SizeRef=685,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
-    DockNode  ID=0x00000002 Parent=0x00000004 SizeRef=305,701 Selected=0x54723243
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=136,124 Size=1280,701 Split=X Selected=0x13926F0B
+  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=184,701 Selected=0x2E9237F7
+  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=1094,701 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=852,701 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1280,508 Split=X
+        DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=685,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
+        DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=305,701 Selected=0x54723243
+      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=1280,191 Selected=0x2E4EBCAA
+    DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=240,701 Selected=0xE7039252
 
