--- a/MAAT-Editor/imgui.ini
+++ b/MAAT-Editor/imgui.ini
@@ -16,7 +16,7 @@ DockId=0x00000002,0
 
 [Window][Viewport]
 Pos=186,19
-Size=758,508
+Size=697,508
 Collapsed=0
 DockId=0x00000001,0
 
@@ -27,25 +27,25 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Inspector]
-Pos=946,19
-Size=334,701
+Pos=885,19
+Size=395,701
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Stats]
 Pos=186,529
-Size=758,191
+Size=697,191
 Collapsed=0
 DockId=0x00000006,0
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=112,154 Size=1280,701 Split=X Selected=0x13926F0B
-  DockNode        ID=0x00000003 Parent=0x3BC79352 SizeRef=184,701 Selected=0x2E9237F7
-  DockNode        ID=0x00000004 Parent=0x3BC79352 SizeRef=1094,701 Split=X
-    DockNode      ID=0x00000007 Parent=0x00000004 SizeRef=758,701 Split=Y
-      DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1280,508 Split=X
+DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=164,206 Size=1280,701 Split=X Selected=0x13926F0B
+  DockNode        ID=0x00000007 Parent=0x3BC79352 SizeRef=883,701 Split=X
+    DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=184,701 Selected=0x2E9237F7
+    DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=697,701 Split=Y
+      DockNode    ID=0x00000005 Parent=0x00000004 SizeRef=1280,508 Split=X
         DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=685,701 CentralNode=1 HiddenTabBar=1 Selected=0x13926F0B
         DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=305,701 Selected=0x54723243
-      DockNode    ID=0x00000006 Parent=0x00000007 SizeRef=1280,191 Selected=0x2E4EBCAA
-    DockNode      ID=0x00000008 Parent=0x00000004 SizeRef=334,701 Selected=0xE7039252
+      DockNode    ID=0x00000006 Parent=0x00000004 SizeRef=1280,191 Selected=0x2E4EBCAA
+  DockNode        ID=0x00000008 Parent=0x3BC79352 SizeRef=395,701 Selected=0xE7039252
 
