--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -178,6 +178,7 @@
     <ClInclude Include="src\MAAT\Scene\SceneCamera.h" />
     <ClInclude Include="src\MAAT\Scene\SceneSerializer.h" />
     <ClInclude Include="src\MAAT\Scene\ScriptableEntity.h" />
+    <ClInclude Include="src\MAAT\Utils\PlatformUtils.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h" />
@@ -638,6 +639,7 @@
     <ClCompile Include="src\Platform\OpenGL\OpenGLTexture.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsPlatformUtils.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\mtpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
