--- a/MAAT-Editor/MAAT-Editor.vcxproj
+++ b/MAAT-Editor/MAAT-Editor.vcxproj
@@ -79,7 +79,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>MAAT_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\MAAT\vendor\spdlog\include;..\MAAT\src;..\MAAT\vendor;..\MAAT\vendor\glm;..\MAAT\vendor\entt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\MAAT\vendor\spdlog\include;..\MAAT\src;..\MAAT\vendor;..\MAAT\vendor\glm;..\MAAT\vendor\entt\include;..\MAAT\vendor\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -95,7 +95,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>MAAT_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\MAAT\vendor\spdlog\include;..\MAAT\src;..\MAAT\vendor;..\MAAT\vendor\glm;..\MAAT\vendor\entt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\MAAT\vendor\spdlog\include;..\MAAT\src;..\MAAT\vendor;..\MAAT\vendor\glm;..\MAAT\vendor\entt\include;..\MAAT\vendor\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -115,7 +115,7 @@
       <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>MAAT_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\MAAT\vendor\spdlog\include;..\MAAT\src;..\MAAT\vendor;..\MAAT\vendor\glm;..\MAAT\vendor\entt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\MAAT\vendor\spdlog\include;..\MAAT\src;..\MAAT\vendor;..\MAAT\vendor\glm;..\MAAT\vendor\entt\include;..\MAAT\vendor\ImGuizmo;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
