--- a/MAAT/MAAT.vcxproj
+++ b/MAAT/MAAT.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="src\MAAT\Math\Math.h" />
     <ClInclude Include="src\MAAT\Renderer\Buffer.h" />
     <ClInclude Include="src\MAAT\Renderer\Camera.h" />
+    <ClInclude Include="src\MAAT\Renderer\EditorCamera.h" />
     <ClInclude Include="src\MAAT\Renderer\Framebuffer.h" />
     <ClInclude Include="src\MAAT\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\MAAT\Renderer\OrthographicCamera.h" />
@@ -618,6 +619,7 @@
     <ClCompile Include="src\MAAT\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\MAAT\Math\Math.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\MAAT\Renderer\EditorCamera.cpp" />
     <ClCompile Include="src\MAAT\Renderer\Framebuffer.cpp" />
     <ClCompile Include="src\MAAT\Renderer\GraphicsContext.cpp" />
     <ClCompile Include="src\MAAT\Renderer\OrthographicCamera.cpp" />
