--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,19 @@
-# Directories
-.vs/
-bin/
+# Binaries
+**/bin/
+!vendor/premake/bin/
 bin-int/
 
-# Files
-*.user
+# Hazel files
+*.log
+
+# Visual Studio files and folder
+.vs/
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
+
+# Directories
+Hazel/vendor/VulkanSDK
+Hazelnut/assets/cache
+scripts/__pycache__
